disable selection on mobile clients - fixes #15

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -49,6 +49,7 @@ $fg-locked: $text-color
     color: $text-color
     font-weight: 400
     font-family: Arial,sans-serif
+    user-select: none
 
   a
     text-decoration: none
